mdapioutput/objects/Mobile_StatusSetting__mdt.object
<CustomObject>
    <description>Mapping between CT CPG Activity Status values and values used in CT Mobile Cancel/Confirm/Prepare/Start/Realized functionality</description>
    <fields>
        <fullName>ActivityObjectName__c</fullName>
        <label>Activity Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanceledValueName__c</fullName>
        <label>Canceled Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmedValueName__c</fullName>
        <label>Confirmed Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InProgressValueName__c</fullName>
        <label>In Progress Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedValueName__c</fullName>
        <label>Planned Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreparedValueName__c</fullName>
        <label>Prepared Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealizedValueName__c</fullName>
        <label>Realized Value API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusFieldName__c</fullName>
        <label>Status Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mobile Activity Status Setting</label>
    <pluralLabel>Mobile Activity Status Settings</pluralLabel>
</CustomObject>